# ilbrarius

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/crawler/: mod.rs
src-tauri/src/exporter/: mod.rs
src-tauri/src/printer/: mod.rs
src-tauri/src/store/: mod.rs
src/components/: Sidebar.tsx
src/hooks/: useCrawler.ts
