[package]
name = "librarius"
version = "0.1.0"
description = "High-performance desktop web archiving tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
base64 = "0.21"
futures = "0.3"
surrealdb = { version = "1.0", features = ["kv-rocksdb"] } 
typst = "0.11.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
